# Fisheye

./: .gitignore  README.md  astrometry.py  centering.py  client.py  clientAPI.py  colormaps.py  cropimages.py  distortion.py  filepath.py  fitzenith.py  main.py  mask.py  mask_input.py  median_filter.py  photometric_calibration.py  photometry.py  projection.py  reduction.py  solve.py  testing_file.txt  upper_hammer.py  wcsconversion.py
Scripts/: IERS_data.py  astrometry.py  astronomy_results.py  centering.py  client.py  colormaps.py  filepath.py  flat.py  flat_input.py  horizon.py  iers_data.py  linearity.py  linearity_input.py  main.py  mask.py  mask_input.py  median_filter.py  metrics.py  photometric_calibration.py  photometry.py  positional_calibration.py  process.py  process_input.py  projection.py  pyproject.toml  reduction.py  sphericalgeometry.py  standard.py  terrain_mask.py  upper_hammer.py
Scripts/Flat_scripts/: flat_image_generation.py  flat_image_generation_input.py
Scripts/Others/: cropimages.py  environment.yml  rename_files.py  startrail.py
User_Manual/: User_Manual_fisheye.docx
Workshop/: Manual.docx
