[tool.poetry]
name = "fisheye-pipeline"
version = "0.1.0"
description = "This is an open-source pipeline for processing fisheye images. This data processing pipeline takes raw data as input and produces photometrically and positionally calibrated images. First, the pipeline starts by applying basic data reduction and performing plate solving. Next, the pipeline performs absolute photometric calibration, positional calibration, and median filtering. Finally, the calibrated images are displayed in both hemispherical fisheye and Hammer projections."
authors = ["Li-Wei Hung <li-wei_hung@nps.gov>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
astropy = "^6.1.3"
matplotlib = "^3.9.2"
numpy = "^1.25.2"
pandas = "^2.2.2"
pytz = "^2024.1"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.1"
scipy = "^1.14.1"
timezonefinder = "^6.5.2"
tqdm = "^4.66.5"
ipython = "^8.29.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
